--- a/AgentsWeb/.classpath
+++ b/AgentsWeb/.classpath
@@ -13,5 +13,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/AgentsEJB"/>
+	<classpathentry kind="lib" path="/home/misel/Downloads/jackson-all-1.9.9.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
